trybuild_tests/test_cannot_return_exposed_secret.stderr
error: lifetime may not live long enough
  --> trybuild_tests/test_cannot_return_exposed_secret.rs:21:69
   |
21 |     let (new_secret, _) = new_secret.expose_secret(|exposed_secret| exposed_secret);
   |                                                     --------------- ^^^^^^^^^^^^^^ returning this value requires that `'1` must outlive `'2`
   |                                                     |             |
   |                                                     |             return type of closure is sosecrets_rs::prelude::ExposedSecret<'2, &A>
   |                                                     has type `sosecrets_rs::prelude::ExposedSecret<'1, &'1 A>`
   |
   = note: requirement occurs because of the type `sosecrets_rs::prelude::ExposedSecret<'_, &A>`, which makes the generic argument `'_` invariant
   = note: the struct `sosecrets_rs::prelude::ExposedSecret<'brand, T>` is invariant over the parameter `'brand`
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance

error[E0507]: cannot move out of dereference of `sosecrets_rs::prelude::ExposedSecret<'_, &A>`
  --> trybuild_tests/test_cannot_return_exposed_secret.rs:22:60
   |
22 |     let (_, _) = new_secret.expose_secret(|exposed_secret| *exposed_secret);
   |                                                            ^^^^^^^^^^^^^^^ move occurs because value has type `A`, which does not implement the `Copy` trait
